2005-12-30  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Only allow getpartialobject for EXIF
	  JPEG images.

2005-12-29  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, library.c:
	  Added "fast filesystem" startup mode for newer
	  Nikon cameras.

	  For cards with large number of images this patch
	  reduces the time from > 10 seconds down to 1.5 seconds.

	  It however only allows recreation of a limited view
	  of the /DCIM tree.

	  To switch between old (more correct) and new (faster)
	  model, use the "Camera Settings" -> "Fast Filesystem" 
	  config.

	* library.c: Kodak C330 has no 0x0 parentobject entry in
	  non-card mode, so mark it as "autodetect parent".

	* Cleaned up some names of Nikon defines values.

	* ptp-pack.c, ptp.c, ptp.h: Added Eastman Kodak 
	  setserial, getserial and settext commands.
	  You can display "Hello World!" on the TFT ... ;)

2005-12-28  Marcus Meissner  <marcus@jet.franken.de>

	* Fixed signedness warnings by using "unsigned char*"
	  more often.

	  Added ptp_getnumobjects() function.

2005-12-19  Marcus Meissner  <marcus@jet.franken.de>

	* Added Canon IXUS 750.
	* Added HP PhotoSmart M23.

2005-12-18  Hubert Figuiere  <hub@figuiere.net>

	* Added Kodak V530.

2005-12-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h:

	  Synchronized Nikon defines with libptp2.
	
	  Added Nikon (special) capture, checkevent, check readyness

2005-12-08  Marcus Meissner  <marcus@jet.franken.de>

	* Added Nikon Coolpix P2.
	* Added Ricoh R3 (print mode).
	* Added Kodak Easyshare C31, reported by Giulio Salani.
	* Added Canon PowerShot A620, reported by Tom Roelz.
	* Added iRiver T20, reported by Martin Senst.
	* Added HP Photosmart M415, mentioned in a bugreport.
	* Added Canon PowerShot A610, reported by Andriy Kulchyts.
	* Added Olympus d-540z, c-310z, x-100, reported by Bruno Parente.
	* Added Panasonic DMC-LZ2, reported by Jens Stutte.
	* Added iRiver T30, reported by Bruno Parente Lima.